kubernetes/workloads/olm/manifests/base/olm/deployment.yaml
---
# yamllint disable rule:line-length
apiVersion: apps/v1
kind: Deployment
metadata:
  name: olm-operator
  namespace: olm
  labels:
    app: olm-operator
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: olm-operator
  template:
    metadata:
      labels:
        app: olm-operator
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: olm-operator-serviceaccount
      containers:
        - name: olm-operator
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          command:
            - /bin/olm
          args:
            - --namespace
            - $(OPERATOR_NAMESPACE)
            - --writeStatusName
            - ""
          image: quay.io/operator-framework/olm@sha256:30481639e89a0cb282fc1855c1bfdde96ec5ee36d1c651c2d0d79c8d249e3ed5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: metrics
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
          terminationMessagePolicy: FallbackToLogsOnError
          resources:
            requests:
              cpu: 10m
              memory: 160Mi
      nodeSelector:
        kubernetes.io/os: linux
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-operator
  namespace: olm
  labels:
    app: catalog-operator
spec:
  strategy:
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: catalog-operator
  template:
    metadata:
      labels:
        app: catalog-operator
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: olm-operator-serviceaccount
      containers:
        - name: catalog-operator
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          command:
            - /bin/catalog
          args:
            - "--namespace"
            - olm
            - --configmapServerImage=quay.io/operator-framework/configmap-operator-registry:latest
            - --util-image
            - quay.io/operator-framework/olm@sha256:30481639e89a0cb282fc1855c1bfdde96ec5ee36d1c651c2d0d79c8d249e3ed5
            - --set-workload-user-id=true
          image: quay.io/operator-framework/olm@sha256:30481639e89a0cb282fc1855c1bfdde96ec5ee36d1c651c2d0d79c8d249e3ed5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: metrics
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
          terminationMessagePolicy: FallbackToLogsOnError
          resources:
            requests:
              cpu: 10m
              memory: 80Mi
      nodeSelector:
        kubernetes.io/os: linux
