kubernetes/workloads/olm/manifests/base/olm/networkpolicy.yaml
---
# yamllint disable rule:line-length
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-traffic
  namespace: olm
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: olm-operator
  namespace: olm
spec:
  podSelector:
    matchLabels:
      app: olm-operator
  ingress:
    - ports:
        - port: metrics
          protocol: TCP
  egress:
    - ports:
        - port: 6443
          protocol: TCP
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: catalog-operator
  namespace: olm
spec:
  podSelector:
    matchLabels:
      app: catalog-operator
  ingress:
    - ports:
        - port: metrics
          protocol: TCP
  egress:
    - ports:
        - port: 6443
          protocol: TCP
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
    - ports:
        - protocol: TCP
          port: 50051
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: packageserver
  namespace: olm
spec:
  podSelector:
    matchLabels:
      app: packageserver
  ingress:
    - ports:
        - protocol: TCP
          port: 5443
  egress:
    - ports:
        - port: 6443
          protocol: TCP
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
    - ports:
        - protocol: TCP
          port: 50051
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-all
  namespace: operators
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
